fixed 'All pages in IE 8: gap above footer (Sitemap, Terms, etc) is much larger than it should be'

--- a/css/ie8.css
+++ b/css/ie8.css
@@ -16,3 +16,7 @@
 body.not-front #page {
 	top: -102px;
 }
+
+#footer {
+	margin-top: -90px;
+}
